redirect to vercel site

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-  Welcome to my website, which currently contains nothing at the moment.
+<meta http-equiv="refresh", content="0; url=https://mikelu94.vercel.app/">
